--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nestjs/schedule": "^4.0.2",
     "@nestjs/typeorm": "^10.0.2",
     "@nestjs/websockets": "^10.3.8",
+    "@socket.io/admin-ui": "^0.5.1",
     "axios": "^1.6.8",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
