--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@nestjs/axios": "^3.0.2",
+    "@nestjs/cache-manager": "^2.2.2",
     "@nestjs/common": "^10.3.8",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.3.8",
@@ -35,6 +36,7 @@
     "@nestjs/websockets": "^10.3.8",
     "@socket.io/admin-ui": "^0.5.1",
     "axios": "^1.6.8",
+    "cache-manager": "^5.5.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
