--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vatlines-server",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Backend REST API and Socket.IO server for the VATLines application.",
   "author": "Ryan Savara",
   "private": true,
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@nestjs/axios": "^3.0.2",
+    "@nestjs/cache-manager": "^2.2.2",
     "@nestjs/common": "^10.3.8",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.3.8",
@@ -33,10 +34,13 @@
     "@nestjs/schedule": "^4.0.2",
     "@nestjs/typeorm": "^10.0.2",
     "@nestjs/websockets": "^10.3.8",
+    "@socket.io/admin-ui": "^0.5.1",
     "axios": "^1.6.8",
+    "cache-manager": "^5.5.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
+    "express": "^4.19.2",
     "express-session": "^1.18.0",
     "log4js": "^6.9.1",
     "passport": "^0.7.0",
