change db from uuid primary key to identity primary key

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "socket.io": "^4.7.5",
+    "sqids": "^0.3.0",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
