support for migrations

--- a/package.json
+++ b/package.json
@@ -18,7 +18,16 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "typeorm-ts-node-commonjs",
+    "schema:sync": "pnpm exec typeorm-ts-node-commonjs schema:sync",
+    "typeorm:cache": "pnpm exec typeorm-ts-node-commonjs cache:clear",
+    "schema:drop": "pnpm exec typeorm-ts-node-commonjs -d ./src/config/orm.datasource.ts",
+    "migration:create": "typeorm migration:create ./src/migrations/schema-update",
+    "migration:generate": "pnpm exec typeorm-ts-node-commonjs migration:generate ./src/migrations/schema-update -d ./src/config/orm.datasource.ts",
+    "migration:show": "pnpm exec typeorm-ts-node-commonjs migration:show -d ./src/config/orm.datasource.ts",
+    "migration:run": "pnpm exec typeorm-ts-node-commonjs migration:run -d ./src/config/orm.datasource.ts",
+    "migration:revert": "pnpm exec typeorm-ts-node-commonjs migration:revert -d ./src/config/orm.datasource.ts"
   },
   "dependencies": {
     "@nestjs/axios": "^3.0.2",
@@ -40,6 +49,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "log4js": "^6.9.1",
